first implementation of new whiteboard

--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -9,8 +9,15 @@
 }
 
 .colors {
-    position: fixed;
-    display: inline;
+    position: absolute;
+    top: 30px;
+    left: 5px;
+}
+
+.select {
+    position: absolute;
+    top: 5px;
+    left: 5px;
 }
 
 .buttons {
