re implemented creating & joining rooms + clearing whiteboard

--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -21,9 +21,9 @@
 }
 
 .buttons {
-    position: fixed;
-    display: inline;
-    margin-top: 200px;
+    position: absolute;
+    top: 210px;
+    left: 5px;
 }
 
 .color {
